add docs for connect, get history
